Closed Bug 211291 Opened 22 years ago Closed 22 years ago

void nsCertTree::InitCompareHash doesn't check the return value of PL_DHashTableInit

Categories

(Core Graveyard :: Security: UI, defect)

Other Branch
x86
Windows 2000
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: ssaux)

References

()

Details

Attachments

(1 file)

This is a code inspection bug. QA: To verify that this bug is fixed, make sure that all callers in of PL_DHashTableInit in the indicated class/file check and handle a failure return result. To verify that this bug is invalid, simply verify (e.g. with lxr) that PL_DHashTableInit is no longer used by the indicated class/file. PL_DHashTableInit returns a PRBool indicating whether it succeeded. PL_DHashTableInit *can* fail. Code can not assume that table->ops or table- >data will be null (in fact it probably will not be), although in all likelyhood table->entryStore will be null it probably isn't safe to assume this. Code at time of bug filing: 135 void nsCertTree::InitCompareHash() 136 { 137 ClearCompareHash(); 138 PL_DHashTableInit(&mCompareCache, &gMapOps, nsnull, 139 sizeof(CompareCacheHashEntry), 128); 140 }
Attached patch patchSplinter Review
Attachment #128529 - Flags: superreview?(bzbarsky)
Attachment #128529 - Flags: review?(kaie)
Attachment #128529 - Flags: superreview?(bzbarsky) → superreview+
Comment on attachment 128529 [details] [diff] [review] patch r=kaie Thanks for the patch
Attachment #128529 - Flags: review?(kaie) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: PSM → Core
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: