Bug 211291 void nsCertTree::InitCompareHash doesn't check the return value of PL_DHashTableInit r=kaie sr=bz